--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "description": "App to price check last epoch items",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "Magefire",
   "license": "GPL-2.0-only",
   "dependencies": {
-    "electron": "^29.0.1",
+    "@electron-forge/plugin-fuses": "^7.3.0",
+    "electron-squirrel-startup": "^1.0.0",
     "g-sheets-api": "^2.2.0",
     "node-global-key-listener": "^0.1.1",
     "screenshot-desktop": "^1.15.0",
     "tesseract.js": "^5.0.4"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^7.3.0",
+    "@electron-forge/maker-deb": "^7.3.0",
+    "@electron-forge/maker-rpm": "^7.3.0",
+    "@electron-forge/maker-squirrel": "^7.3.0",
+    "@electron-forge/maker-zip": "^7.3.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.3.0",
+    "electron": "29.0.1"
   }
 }
